# splatoon3-wiki

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  pyproject.toml
config/: categories.yaml  discord.yaml.example  domain.md  pipeline.yaml
crawler/: __init__.py  __main__.py  client.py  config.py  fetch.py  main.py  models.py  week.py  writer.py
pipeline/: config.py  frontmatter_io.py  main.py  models.py  slug.py  state.py
sample_raw/: 2026-04-01-meeting-notes.md  2026-04-05-discord-log.md  2026-04-21-meeting-notes.md  2026-04-28-descord-log.md  20260-04-23-discodrd-log.md
scripts/: migrate_to_path.py  reset_wiki_manifest.py
snippets/: 2026-04-05-amabi-right-high-suppression.md  2026-04-05-booyah-bomb-placement-strategy.md  2026-04-05-enemy-respawn-tracking.md  2026-04-05-splash-shield-directional-cover.md  2026-04-05-switching-combat-modes.md  2026-04-05-tacticooler-positioning-and-gear.md  2026-04-05-using-cover-and-angles.md  2026-04-21-dakai-principles-and-routes.md  2026-04-21-dakai-support-role.md  2026-04-21-fluid-roles-concept.md  2026-04-21-role-skirmisher-definition.md  2026-04-21-role-slayer-definition.md  2026-04-26-baigai-area-left-drop-visibility.md  2026-04-26-general-dakai-home-base-clearing.md  2026-04-26-general-osae-waiting-actions.md  2026-04-26-general-pushing-frontline-priority.md  2026-04-26-kinme-area-left-side-control.md  2026-04-26-kinme-area-right-drop-maintenance.md  2026-04-26-weapon-range-management-kelvin-barrel.md  2026-04-28-cutting-pie-technique.md  2026-04-28-high-ground-containment-principle.md  (+2 more)
wiki/: README.md
(+145 files in other folders)
